Fixed overflowed content

--- a/styles/main.css
+++ b/styles/main.css
@@ -580,10 +580,6 @@ a:where(:hover, :focus, :focus-visible) {
   .creation-grid {
     grid-column: 1 / span 2;
     grid-row: 2;
-    grid-template-rows: repeat(2, 1fr);
-    grid-template-columns: repeat(4, 1fr);
-    height: 65vw;
-    gap: var(--size-500);
   }
 
   .creation-cell {
@@ -625,6 +621,17 @@ a:where(:hover, :focus, :focus-visible) {
   .creations-btn-container {
     margin-top: 0;
     justify-items: end;
+  }
+}
+
+@media (min-width: 57.625em) {
+  .creation-grid {
+    grid-column: 1 / span 2;
+    grid-row: 2;
+    grid-template-rows: repeat(2, 1fr);
+    grid-template-columns: repeat(4, 1fr);
+    height: 65vw;
+    gap: var(--size-500);
   }
 }
 
